added image of whiteboard

--- a/_lessons/distributed_norms.html
+++ b/_lessons/distributed_norms.html
@@ -61,9 +61,10 @@ Working Sessions
 
 # Content Presentations
 
-- Video on
-- Mic off
-- Questions in the chat (moderated by TA)
+- **Video on**
+- **Mic off**
+- **Questions in the chat (moderated by TA)**
+
 
 ---
 
@@ -80,9 +81,8 @@ Type your answer to everyone in the chat.
 - Video on
 - Mic off
 - Questions in the chat (moderated by TA)
-- Checkpoints
-- Pausing for Questions
-- *The Whiteboard*
+- **Checkpoints**
+- **Pausing for Questions**
 
 ---
 
@@ -99,6 +99,21 @@ class: subtitle
 --
 
 ## Questions??
+
+---
+
+# Content Presentations
+
+- Video on
+- Mic off
+- Questions in the chat (moderated by TA)
+- Checkpoints
+- Pausing for Questions
+- **The Whiteboard**  
+
+---
+
+<img src="/ui/img{{page.id}}/whiteboard-example.png" width = 100%>
 
 ---
 
@@ -126,6 +141,6 @@ In your breakout room...
 
 class: title, center, middle
 
-Questions before we jump in??
+# Questions before we jump in??
 
 {% include options/next_presentation.html %}
