Cleaned up slides, added notes to distributed_norms.html

--- a/_lessons/distributed_norms.html
+++ b/_lessons/distributed_norms.html
@@ -24,20 +24,28 @@ class: title, center, middle
 
 .center[
 .left-column-66[.left-column[
-💯
-All in
+<p style="font-size:100px;padding:0">💯</p>
+## All in
 ]
 
 .right-column[
-🙋🏽‍♀️
-Curiosity
+<p style="font-size:100px;padding:0">🙋🏽‍♀️</p>
+## Curiosity
 ]]
 
+
 .right-column-33[
-👩🏻‍💻🧑🏾‍💻👨🏼‍💻
-Community
+<p style="font-size:100px;padding:0"> 👩🏻‍💻🧑🏾‍💻👨🏼‍💻</p>
+## Community
 ]
 ]
+
+???
+During these two days, we want to introduce some norms so we can get the most out of today
+* All In - If we are all fully present, this will be an impactful two days for everyone.  You might consider turning off notifications during lessons.
+* Curiosity - Our sessions are driven by thoughtful, deep questions and everyone contributing their expertise.
+* Community - While we are learning here, people are going to be at different places in their dbt skills.  Let's all support each other in getting better.  You might even make a long term connection in the data community!
+
 ---
 
 # Scope of Learning
@@ -46,19 +54,20 @@ Community
 2. Hard analytics skills
 3. Ecosystem Context
 
+???
+As we are working together, it might be helpful to think about your learning in these three buckets:
+* dbt empowers analysts to use SE principles.  We will cover the principles so we know the theory behind their implementation.
+* We will also learn concrete skills for building a dbt project of your own.
+* Finally, our work operates in the modern data ecosystem.  We will all be stronger team members at our orgs if we understand this ecosystem.
+
 ---
 
-# Two Learning Methods
+class: subtitle, center, middle
 
-.center[
-.left-column[
-Content Presentations
-]
+# Two Methods of Learning
 
-.right-column[
-Working Sessions
-]
-]
+Content Presentations & Working Sessions
+
 
 ---
 
@@ -67,6 +76,11 @@ Working Sessions
 - **Video on**
 - **Mic off**
 - **Questions in the chat (moderated by TA)**
+
+???
+* As you may do in your own meetings, during content presentations, we will norm on videos on, mic off.
+* Also, to preserve the flow of the content delivery, we would like to keep questions in that chat than pausing to ask them.
+* Another teacher will moderate the chat and escalate questions if they make sense in the moment as opposed to at the end of a section.
 
 
 ---
@@ -87,21 +101,28 @@ Type your answer to everyone in the chat.
 - **Checkpoints**
 - **Pausing for Questions**
 
+
 ---
 
 class: subtitle
 
 # Checkpoint:
 
-- What is the scope of learning for our two days together?
+- How might learning about the modern data ecosystem make you a stronger team member?
 
 --
 
-- How can you ask questions during a presentation?
+- Recap: What's the purpose of the whiteboard again?
 
 --
 
 ## Questions??
+
+???
+* The checkpoints will look like this with a couple of questions.
+* Option A: Type your answer in the chat.
+* Option B: Raise your hand to give a verbal response.
+
 
 ---
 
@@ -114,9 +135,21 @@ class: subtitle
 - Pausing for Questions
 - **The Whiteboard**  
 
+???
+* We love to hear and honor a variety of questions.  
+* Sometimes a question will be answered later in the course.
+* Sometimes a question will require a longer conversation that may better be answered later in the course.
+* In these cases, we will log these on a whiteboard.  Normally this is a physical whiteboard...
+
 ---
 
 <img src="/ui/img{{page.id}}/whiteboard-example.png" width = 100%>
+
+???
+* But, we are working remotely :-)
+* So we will keep track of these in a Google Doc like this one.
+* Based on timing, we will revisit the whiteboard after lunch and at the end of each day.
+* The link is in the SLACK channel if you want to add to this on your own.
 
 ---
 
@@ -127,6 +160,12 @@ class: subtitle
 - Breakout Rooms
 - Screensharing
 - Share the floor - step up, step back
+
+???
+* The other method of learning will be working sessions!
+* These will be chances to work in small groups with the support of a teacher.
+* We will use Zoom's breakout rooms to manage these.
+
 
 ---
 
@@ -139,6 +178,11 @@ In your breakout room...
 - Find out who has a birthday closest to today (You are the screen sharer for this activity 😀)
 - In the Google Doc - record your team name and everyone's spririt animal.
 - When you see the prompt counting down the breakout rooms, let the timer run down before returning.
+
+???
+* (Send link to Google doc in the Slack Channel)
+* We will do a quick icebreaker with breakout rooms to get to know each other a little birthday
+* (Call on someone) could you read the slide for us
 
 ---
 
