--- a/_lessons/data-warehouses.html
+++ b/_lessons/data-warehouses.html
@@ -237,10 +237,11 @@ class: subtitle
 
 # Checkpoint:
 
-- What are transactional databases optimized for?
+What type of database should you use if...
+- You are building an application for tracking web events?
 --
 
-- What are analytical databases optimized for?
+- You want to combine data from Snowplow and Stripe to visualize attribution data in Looker?
 
 --
 
@@ -377,15 +378,11 @@ class: subtitle
 
 # Checkpoint:
 
-- What empowers data warehouses to be fast for analytics?
+- How can your data team benefit from scalable compute resources?
 
 --
 
-- What are SQL statements that databases need to __sort__ data for?
-
---
-
-- Why is it important to consider the physical aspects of our datawarehouse?
+- How does knowledge of the 'physical' aspects of a data warehouse impact our work as analyts?
 
 --
 
@@ -610,11 +607,11 @@ class: subtitle
 
 # Checkpoint:
 
-- What is the advantage to separating compute and storage?
+- Who are the *big three* players in data warehousing?
 
 --
 
-- Who are the *big three* players in data warehousing?
+- What data warehouse technologies are you using at your organization?
 
 ---
 
