--- a/_content/index.html
+++ b/_content/index.html
@@ -255,7 +255,7 @@ canvas {
 						<center><h3 id="faq" class="h2">FAQ</h3></center>
 						<p>
                             <h5>Is there a free online version?</h5>
-                                <p> Our self-service version of learn is currently in development and we are eager to put this into production.  Our <a href="https://docs.getdbt.com">dbt docs</a> are an excellent resource in the mean time for learning dbt and analytics engineering</p>
+                                <p> Our self-service version of Learn is currently in development and we are eager to put it into production.  The <a href="https://docs.getdbt.com">dbt docs</a> are an excellent resource in the meantime for learning dbt and analytics engineering.</p>
                             <h5> Who should attend dbt Learn?</h5>
                                 <p> If some of the following statements are true for you, then dbt Learn will likely be a good fit:
                                     <ul>
