--- a/_content/index.html
+++ b/_content/index.html
@@ -266,7 +266,7 @@ canvas {
                                         <li>I want the official dbt training.</li>
                                         <li>I'm not someone who regularly adopts new software just by reading documentation.</li>
                                       </ul></p>
-                                <p> We have found dbt learn to be particularly powerful for the following roles:
+                                <p> We have found dbt Learn to be particularly powerful for the following roles:
                                     <ul>
                                         <li>Data Analysts who have been using dbt for ~3 months.</li>
                                         <li>Self-starters in the analytics space - some working SQL knowledge</li>
