Fix icebreaker prompt.
Co-authored-by: Jeremy Cohen <jeremy@fishtownanalytics.com>

--- a/_lessons/distributed_norms.html
+++ b/_lessons/distributed_norms.html
@@ -181,7 +181,7 @@ In your breakout room...
 
 ???
 * (Send link to Google doc in the Slack Channel)
-* We will do a quick icebreaker with breakout rooms to get to know each other a little birthday
+* We will do a quick icebreaker with breakout rooms to get to know each other a little better
 * (Call on someone) could you read the slide for us
 
 ---
