Zoom Norms Adjustment

--- a/_lessons/distributed_norms.html
+++ b/_lessons/distributed_norms.html
@@ -75,7 +75,7 @@ Content Presentations & Working Sessions
 
 - **Video on**
 - **Mic off**
-- **Questions in the chat (moderated by TA)**
+- **Questions in the chat (moderated by another instructor)**
 
 ???
 * As you may do in your own meetings, during content presentations, we will norm on videos on, mic off.
