Change ice breaker question

--- a/_lessons/distributed_norms.html
+++ b/_lessons/distributed_norms.html
@@ -176,7 +176,7 @@ class: subtitle
 In your breakout room...
 - Introduce yourself again
 - Find out who has a birthday closest to today (You are the screen sharer for this activity 😀)
-- In the Google Doc - record your team name and everyone's spririt animal.
+- In the Google Doc - record your team name and everyone's favorite <a href="https://en.wikipedia.org/wiki/List_of_Crayola_crayon_colors">Crayola Crayon Color.</a>
 - When you see the prompt counting down the breakout rooms, let the timer run down before returning.
 
 ???
