--- a/_content/index.html
+++ b/_content/index.html
@@ -276,7 +276,7 @@ canvas {
                                       
                             <h5>Is it possible to see a course syllabus ahead of time?</h5>
                                 <p> We are constantly updating and improving on dbt Learn! We provide registered students with a detailed
-                                    agenda a few weeks before each session. You can see <a href="#agenda">above</a> some topic areas we always cover and our slides are available for preview <a href="./lessons">here</a>.</p>
+                                    agenda a few weeks before each session. The <a href="#agenda">agenda</a> lists some topic areas we always cover and our <a href="./lessons">lessons</a> are available to preview.</p>
                             <h5>The cost of the event is prohibitive for me, is there any flexibility on the price?</h5>
                                 <p> We are committed to making dbt, and knowledge of analytics engineering, accessible to as many people as possible.
                                     To that end, we have <a href="https://docs.google.com/forms/d/e/1FAIpQLSf71YlOWjjX6Uuf5v0Y5S9NNj58A7-Ug8a2Lpt1rVnnHqm5rg/viewform">diversity scholarship</a>
