--- a/_lessons/distributed_norms.html
+++ b/_lessons/distributed_norms.html
@@ -8,7 +8,7 @@ working_session: false
 
 class: title, center, middle
 
-# Welcome to dbt learn distributed
+# Welcome to dbt Learn Distributed
 
 ---
 
