Small typo in FAQs

--- a/_content/index.html
+++ b/_content/index.html
@@ -279,7 +279,7 @@ canvas {
                                     agenda a few weeks before each session. The <a href="#agenda">agenda</a> lists some topic areas we always cover and our <a href="./lessons">lessons</a> are available to preview.</p>
                             <h5>The cost of the event is prohibitive for me, is there any flexibility on the price?</h5>
                                 <p> We are committed to making dbt, and knowledge of analytics engineering, accessible to as many people as possible.
-                                    To that end, we have <a href="https://docs.google.com/forms/d/e/1FAIpQLSf71YlOWjjX6Uuf5v0Y5S9NNj58A7-Ug8a2Lpt1rVnnHqm5rg/viewform">diversity scholarship</a>
+                                    To that end, we have a <a href="https://docs.google.com/forms/d/e/1FAIpQLSf71YlOWjjX6Uuf5v0Y5S9NNj58A7-Ug8a2Lpt1rVnnHqm5rg/viewform">diversity scholarship</a>
                                     available to decrease or waive the cost of participation.
                     </div>
                 </div>
