--- a/_lessons/data-warehouses.html
+++ b/_lessons/data-warehouses.html
@@ -628,17 +628,5 @@ class: subtitle
 
 # Zoom Out
 
---
-
-- Polish your dbt project
-- Intro to Jinja
-- dbtonic Jinja
-- Packages and Projects
-- dbt Materializations & Incremental models
-- Data Warehouses
---
-
-- .orange[Group Case Study]
-- Techniques of the Trade
-
+{% include options/zoom_out.html %}
 {% include options/next_presentation.html %}
