LSite data for static links

--- a/_lessons/distributed_norms.html
+++ b/_lessons/distributed_norms.html
@@ -133,7 +133,7 @@ class: subtitle
 - Questions in the chat (moderated by TA)
 - Checkpoints
 - Pausing for Questions
-- **The Whiteboard**  
+- [**The Whiteboard**]({{site.data.links.whiteboard}})
 
 ???
 * We love to hear and honor a variety of questions.  
