--- a/_lessons/outro.html
+++ b/_lessons/outro.html
@@ -19,7 +19,7 @@ class: title, center, middle
 class: title, center, middle
 
 # Feedback 🙏
-[bit.ly/dbt-learn-survey](//bit.ly/dbt-learn-survey)
+[Five-minute survey]({{site.data.links.feedback}})
 
 
 ---
