--- a/_lessons/who-is-analytics-engineer.html
+++ b/_lessons/who-is-analytics-engineer.html
@@ -10,7 +10,7 @@ class: title, center, middle
 
 # Who are you?
 
-- [Intros!](https://docs.google.com/presentation/d/1-IIuQjG9KYL5QYPaoSc1njFnMjxrIpF5PLlHDsBVqbE/)
+- [Intros!]({{site.data.links.intros}})
 - Where are you calling from? (city + room)
 - What does your day-to-day work look like?
 
