--- a/_lessons/who-is-analytics-engineer.html
+++ b/_lessons/who-is-analytics-engineer.html
@@ -94,32 +94,6 @@ All that and more... after the break!
 
 ---
 class: subtitle
-# This course: distributed!
-
-- [Agenda](https://docs.google.com/spreadsheets/d/1DOvh06haGHlkiIrBJ5mDnOyZOf5HvZ0AaCsaJgjw3Rk/)
-- Zoom etiquette
-    - Rename yourself: first name & pronouns
-    - Keep video on, as you are able
-    - Use chat liberally
-    - Feel free to raise your hand / interrupt to ask questions!
-    - ["Whiteboard"](https://docs.google.com/document/d/1S9K57H6_Q77P6q7TKHmeGreiQIDUvizehEzWAXZQQX4/) for parked questions
-
----
-class: subtitle
-# A final note
-
-.left-column[
-### Values
-- Be curious
-- Learn from each other
-]
---
-.right-column[
-### Goals
-
-- Learning to be dbt superusers, analytics engineers, _and_ generous
-members of an open-source community :)
-- What are some of yours? (Write in chat!)
-]
+# Questions so far?
 
 {% include options/next_presentation.html %}
