Create + apply last_slide include

--- a/_lessons/analytics-engineering-viewpoint.html
+++ b/_lessons/analytics-engineering-viewpoint.html
@@ -178,4 +178,4 @@ class: subtitle
 * Analytics should use environments
 * Analytics workflows should be automated
 
-{% include options/next_presentation.html %}
+{% include options/last_slide.html %}
