--- a/_lessons/data-warehouses.html
+++ b/_lessons/data-warehouses.html
@@ -622,11 +622,4 @@ You should be building intuition around:
 
 ## Questions??
 
----
-
-class: subtitle
-
-# Zoom Out
-
-{% include options/zoom_out.html %}
-{% include options/next_presentation.html %}
+{% include options/last_slide.html %}
