--- a/_lessons/dbt-fundamentals.html
+++ b/_lessons/dbt-fundamentals.html
@@ -458,7 +458,7 @@ select * from raw.stripe.payment
 
 By the way, the Excel spreadsheet I've been using to raise venture capital says my all-time revenue is $1 672.
 
-{% include options/next_presentation.html %}
+{% include options/last_slide.html %}
 
 ???
 Discussion points (leading questions for the next session)
