--- a/_lessons/docs.html
+++ b/_lessons/docs.html
@@ -217,4 +217,4 @@ You should be able to:
 * Add descriptions to your dbt project
 * Generate documentation for your project
 
-{% include options/next_presentation.html %}
+{% include options/last_slide.html %}
