--- a/_lessons/group-case-study.html
+++ b/_lessons/group-case-study.html
@@ -61,4 +61,4 @@ select * from raw.learn_stripe.refunds;
 
 Time is limited — if you can't get something done in time, jot it down as a "to do" somewhere.
 
-{% include options/next_presentation.html %}
+{% include options/last_slide.html %}
