--- a/_lessons/intro-to-jinja.html
+++ b/_lessons/intro-to-jinja.html
@@ -316,4 +316,4 @@ select * from aggregated
 class: subtitle, middle, center
 # Let's jinja!
 
-{% include options/next_presentation.html %}
+{% include options/last_slide.html %}
