--- a/_lessons/packages.html
+++ b/_lessons/packages.html
@@ -198,4 +198,4 @@ If you're looking for inspiration:
 * Union two models together using the `union_relations` macro
 * Whatever you want!
 
-{% include options/next_presentation.html %}
+{% include options/last_slide.html %}
