--- a/_lessons/polish-project.html
+++ b/_lessons/polish-project.html
@@ -161,4 +161,4 @@ PR templates help you write better PRs (and are great tools for reviewers!)
 class: subtitle, center, middle
 # 🧘‍♀️ [Much better!](https://github.com/fishtown-analytics/dbt-learn-demo/pull/8)
 
-{% include options/next_presentation.html %}
+{% include options/last_slide.html %}
