--- a/_lessons/sources.html
+++ b/_lessons/sources.html
@@ -261,4 +261,4 @@ You should be able to:
 * Add tests to a source
 * Check the freshness of your source
 
-{% include options/next_presentation.html %}
+{% include options/last_slide.html %}
