--- a/_lessons/techniques-trade.html
+++ b/_lessons/techniques-trade.html
@@ -735,4 +735,4 @@ class: subtitle, center, middle
 
 {% endraw %}
 
-{% include options/next_presentation.html %}
+{% include options/last_slide.html %}
