--- a/_lessons/testing-ci.html
+++ b/_lessons/testing-ci.html
@@ -229,4 +229,4 @@ You should be able to:
 * Explain how dbt tests work
 * Find the compiled SQL for tests
 
-{% include options/next_presentation.html %}
+{% include options/last_slide.html %}
