--- a/_lessons/who-is-analytics-engineer.html
+++ b/_lessons/who-is-analytics-engineer.html
@@ -96,4 +96,4 @@ All that and more... after the break!
 class: subtitle
 # Questions so far?
 
-{% include options/next_presentation.html %}
+{% include options/last_slide.html %}
