--- a/_lessons/dbt-project-design.html
+++ b/_lessons/dbt-project-design.html
@@ -659,4 +659,4 @@ When creating a dbt project:
 	- Codebase
 	- Database
 
-{% include options/next_presentation.html %}
+{% include options/last_slide.html %}
