--- a/_lessons/deployment.html
+++ b/_lessons/deployment.html
@@ -163,4 +163,4 @@ class: subtitle
 You should:
 - Understand some reasons why companies opt to use dbt _without_ dbt Cloud
 
-{% include options/next_presentation.html %}
+{% include options/last_slide.html %}
