--- a/_lessons/distributed-norms.html
+++ b/_lessons/distributed-norms.html
@@ -1,6 +1,6 @@
 ---
 layout: presentation
-title: Distributed dbt learn norms
+title: Distributed dbt Learn norms
 estimated_teaching_time: 30
 teaching_method: slides + practicing norms.
 working_session: false
@@ -190,4 +190,4 @@ class: title, center, middle
 
 # Questions before we jump in??
 
-{% include options/next_presentation.html %}
+{% include options/last_slide.html %}
