Updated CPs for dbt fundamentals

--- a/_lessons/dbt-fundamentals.html
+++ b/_lessons/dbt-fundamentals.html
@@ -231,9 +231,15 @@ Good knowledge check questions:
 
 ---
 
-class: subtitle, center, middle
-# Good so far?
-## Let's take it a step further...
+class: subtitle
+
+# Checkpoint:
+
+- What are the four pieces you need to use dbt?
+
+--
+
+## Good so far?? - Questions??
 
 ---
 
@@ -337,6 +343,26 @@ class:subtitle
 .center[
 <img src="/ui/img{{page.id}}/typical-dag.png" style="width: 50%;">
 ]
+
+---
+
+class: subtitle
+
+## Checkpoint:
+
+.center[
+<img src="/ui/img{{page.id}}/example-dag.png" style="width: 100%;">
+]
+
+- What models does `customers_with_attribution` depend on?
+
+--
+
+- What models depend on `customers_with_attribution`?
+
+--
+
+- Questions??
 
 
 ---
