Updated CP for dbt project design

--- a/_lessons/dbt-project-design.html
+++ b/_lessons/dbt-project-design.html
@@ -271,6 +271,22 @@ isn't _100% perfect_ or needs to change over time.
 
 ---
 
+class: subtitle
+
+# Checkpoint:
+
+- My manager is committed to a snowflake schema for your organizing our data, can I still use dbt?
+
+--
+
+- Why is that the case?
+
+--
+
+## Questions??
+
+---
+
 class: subtitle, center, middle
 
 # Interfaces to your data product
