Add tracks preview slide

--- a/_lessons/materializations-incremental.html
+++ b/_lessons/materializations-incremental.html
@@ -237,6 +237,27 @@ and have never been burned before
 ---
 
 layout: false
+class: subtitle
+
+# After lunch
+
+.left-column[
+### Track 1: Talking
+- Incremental models (demo)
+- Modern data warehouses
+- Open floor: data tooling and ecosystem
+]
+
+.right-column[
+### Track 2: Doing
+- More Jinja, packages, custom schema tests
+- Case study: modeling from scratch
+- Project therapy
+]
+
+
+---
+
 class: title, center, middle
 
 # Incremental models
