Added to Setting the Stage

--- a/_lessons/distributed-norms.html
+++ b/_lessons/distributed-norms.html
@@ -15,6 +15,7 @@ class: title, center, middle
 # Setting the Stage
 
 - We have all been working remotely for some time.
+- Different organizations use different video conference tools.
 - Different organizations have different norms.
 - We will set some norms today so that everyone gets the most out of this practice.
 
