Link to viewpoint from who-is-ae

--- a/_lessons/who-is-analytics-engineer.html
+++ b/_lessons/who-is-analytics-engineer.html
@@ -71,6 +71,10 @@ audience: Share your story of the silliest data problem you've had
 
 <img src="/ui/img{{page.id}}/modern-data-stack.svg" style="width: 100%;">
 
+&nbsp;
+
+.center[_Read the [Viewpoint](https://docs.getdbt.com/docs/about/viewpoint/)_]
+
 
 ???
 * The solution? Transform your data in a shape that's ready for analytics. But don't just do that:
