Intermediate models can be ephemerals

--- a/_lessons/dbt-project-design.html
+++ b/_lessons/dbt-project-design.html
@@ -421,8 +421,8 @@ dbt sits between **source data** and **business intelligence**.
 ### __[transformed]
 - Intermediate models accomplishing a transformation step
 - Not meant for public consumption
-- `orders__amortized`
-- Views (can be tables if more performant)
+- E.g. `orders__amortized`
+- Views or ephemerals (tables only if needed for performance)
 - Different schema?
 ]
 
