Add logistical notes; office hours

--- a/_lessons/outro.html
+++ b/_lessons/outro.html
@@ -6,6 +6,14 @@ class: title, center, middle
 # Closing ceremony
 
 ---
+# After today
+
+* Zoom recordings (video + chat): within a week
+* dbt Cloud + Snowflake access: two more weeks
+* Office Hours (totally optional): {{ site.data.links.office_hours }}
+* Slack channel: forever
+
+---
 # How can I stay involved in the dbt community?
 --
 
