Clarify what we mean by forever

--- a/_lessons/outro.html
+++ b/_lessons/outro.html
@@ -11,7 +11,7 @@ class: title, center, middle
 * Zoom recordings (video + chat): within a week
 * dbt Cloud + Snowflake access: two more weeks
 * Office Hours (totally optional): {{ site.data.links.office_hours }}
-* Slack channel: forever
+* Slack channel: forever! (but free plan)
 
 ---
 # How can I stay involved in the dbt community?
