--- a/_lessons/dbtonic-jinja.html
+++ b/_lessons/dbtonic-jinja.html
@@ -36,8 +36,8 @@ Use it always! This is how dbt:
 ```sql
 -- macros/cents_to_dollars.sql
 
-{% macro cents_to_dollars(column_name, precision=2) %}
-    ({{ column_name }} / 100)::numeric(16, {{ precision }})
+{% macro cents_to_dollars(column_name, scale=2) %}
+    ({{ column_name }} / 100)::numeric(16, {{ scale }})
 {% endmacro %}
 
 ```
