starting focus slies

--- a/_lessons/data-warehouses.html
+++ b/_lessons/data-warehouses.html
@@ -1,6 +1,11 @@
 ---
 layout: presentation
 title: Data Warehouses
+learning-objectives:
+  - Explain the difference between a transactional and analytical database
+  - Explain the key features of a modern data warehouse
+  - Explain which data warehouse are best in class and why
+  - Explain use cases for a Data Lake technology
 ---
 
 class: title, center, middle
@@ -34,12 +39,14 @@ Learning about your data warehouse is a surefire way to
 
 class: focus
 
-# Data warehouses - Focus
+# Data Warehouses - Focus
 
-- What is a Data Warehouse?
-- Transactional vs. Analytical databases
-- The Modern Data Warehouse
-- Features of Data Warehouses
+- Explain the difference between a transactional and analytical database
+- Explain the key features of a modern data warehouse
+- Explain which data warehouse are best in class and why
+- Explain use cases for a Data Lake technology
+
+{% include options/focus_slide.html %}
 
 ---
 
