focus slide template and adding slide to Data Warehouses

--- a/_lessons/data-warehouses.html
+++ b/_lessons/data-warehouses.html
@@ -1,7 +1,7 @@
 ---
 layout: presentation
 title: Data Warehouses
-learning-objectives:
+learningObjectives:
   - Explain the difference between a transactional and analytical database
   - Explain the key features of a modern data warehouse
   - Explain which data warehouse are best in class and why
@@ -36,15 +36,6 @@ Learning about your data warehouse is a surefire way to
 ]
 
 ---
-
-class: focus
-
-# Data Warehouses - Focus
-
-- Explain the difference between a transactional and analytical database
-- Explain the key features of a modern data warehouse
-- Explain which data warehouse are best in class and why
-- Explain use cases for a Data Lake technology
 
 {% include options/focus_slide.html %}
 
