Day 1 Learning Objectives and focus slide

--- a/_lessons/dbt-fundamentals.html
+++ b/_lessons/dbt-fundamentals.html
@@ -4,6 +4,10 @@ title: dbt Fundamentals
 estimated_teaching_time: 45
 estimated_working_session: 60
 teaching_method: live demo + slides. Questions encouraged.
+learningObjectives:
+  - Review the basics from the dbt Learn tutorial
+  - Explain models, test, materializations, and dependencies in the context of a dbt project
+
 ---
 class: title, center, middle
 # Setting the scene
@@ -72,13 +76,9 @@ Uh oh...
 class: title, center, middle
 # dbt Fundamentals
 
-
 ---
 
-# The bigger picture
-
-1. Review of pre-work
-2. Preview of core concepts
+{% include options/focus_slide.html %}
 
 ---
 
