--- a/_lessons/dbt-project-design.html
+++ b/_lessons/dbt-project-design.html
@@ -4,6 +4,12 @@ title: dbt Project Design
 estimated_teaching_time: 60
 teaching_method: slides
 working_session: false
+learningObjectives:
+  - Differentiate between data organization and data transformation
+  - Name the three main interfaces for a dbt project
+  - Build intuition for naming conventions for database objects
+  - Build intuition for how to use dbt and BI tools together
+
 ---
 
 class: title, center, middle
@@ -30,6 +36,10 @@ With dbt!
 --
 
 .grey[_Cool._]
+
+---
+
+{% include options/focus_slide.html %}
 
 ---
 
