--- a/_lessons/sources.html
+++ b/_lessons/sources.html
@@ -4,6 +4,12 @@ title: Sources
 estimated_teaching_time: 30
 teaching_method: live demo + slides. Questions encouraged.
 working_session: true
+learningObjectives:
+  - Configure Sources
+  - Build dependencies between sources and models
+  - Configure tests for sources
+  - Configure freshness snapshots
+  - Build inuition for why defining sources can be helpful in the future
 ---
 
 class: title, center, middle
@@ -54,6 +60,10 @@ new payment method was introduced)
 --
 
 - (!!) Declare `external` properties ([read more](https://github.com/fishtown-analytics/dbt-external-tables))
+
+---
+
+{% include options/focus_slide.html %}
 
 ---
 
