--- a/_lessons/polish-project.html
+++ b/_lessons/polish-project.html
@@ -4,6 +4,8 @@ title: Polish your dbt project
 estimated_teaching_time: 45
 estimated_working_session: 0
 teaching_method: 15 minutes for recap at start. 30 minutes of one-sided lecture
+learningObjectives:
+  - Develop a mental checklist for polishing your project before sharing your code
 
 ---
 class: title, center, middle
@@ -12,6 +14,11 @@ class: title, center, middle
 ???
 A list of hot-tips that will take your project from good to great!
 ---
+
+{% include options/focus_slide.html %}
+
+---
+
 class: subtitle
 # dbt code
 
