QuickFix/docs.html
Co-authored-by: Claire Carroll <claire@fishtownanalytics.com>

--- a/_lessons/docs.html
+++ b/_lessons/docs.html
@@ -8,7 +8,7 @@ learningObjectives:
   - Explain how to add descriptions to models and sources
   - Configure doc blocks
   - Generate and view documentation in dbt Cloud and the command line
-  - Build intution for the value of documenting your dbt project
+  - Build intuition for the value of documenting your dbt project
   
 ---
 
