--- a/_lessons/data-warehouses.html
+++ b/_lessons/data-warehouses.html
@@ -4,7 +4,7 @@ title: Data Warehouses
 learningObjectives:
   - Explain the difference between a transactional and analytical database
   - Explain the key features of a modern data warehouse
-  - Explain which data warehouse are best in class and why
+  - Explain which data warehouses are best in class and why
   - Explain use cases for a Data Lake technology
 ---
 
