Update testing LO

--- a/_lessons/testing-ci.html
+++ b/_lessons/testing-ci.html
@@ -6,7 +6,7 @@ teaching_method: live demo + slides. Questions encouraged.
 working_session: true
 learningObjectives:
   - Explain the role of tests in an analytics workflow
-  - Configure tests using a configuration file
+  - Add tests to your models
   - Run tests on your models
   - Build intuition for why tests fail and what to test
   
